--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 /* These styles create the images on the cards. We're using a path to the images
    included in a directory in our game, but you can also use an image that is
    hosted anyhwere on the internet by using its url in the "url()" rule. */
-.ie {background: url(./images/ie.png) no-repeat; background-size: contain;}
+.ie {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/13055_324678807651715_870152772_n.jpg) no-repeat; background-size: contain;}
 .fx {background: url(./images/fx.png) no-repeat; background-size: contain;}
 .cr {background: url(./images/cr.png) no-repeat; background-size: contain;}
 .sf {background: url(./images/sf.png) no-repeat; background-size: contain;}
