--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 /* These styles create the images on the cards. We're using a path to the images
    included in a directory in our game, but you can also use an image that is
    hosted anyhwere on the internet by using its url in the "url()" rule. */
-.ie {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/13055_324678807651715_870152772_n.jpg) no-repeat; background-size: contain;}
+.ie {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/13055_324678807651715_870152772_n.jpg) no-repeat; background-size: cover;}
 .fx {background: url(https://sphotos-b.xx.fbcdn.net/hphotos-ash3/536151_324678830985046_1217788841_n.jpg) no-repeat; background-size: contain;}
 .cr {background: url(https://sphotos-b.xx.fbcdn.net/hphotos-snc7/385397_324678837651712_1084005695_n.jpg) no-repeat; background-size: contain;}
 .sf {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-ash3/536194_324678840985045_1185496597_n.jpg) no-repeat; background-size: contain;}
