--- a/style.css
+++ b/style.css
@@ -100,10 +100,10 @@ body {
 .fx {background: url(https://sphotos-b.xx.fbcdn.net/hphotos-prn1/555793_324686074317655_12666433_n.jpg) no-repeat; background-size: contain;}
 .cr {background: url(https://sphotos-b.xx.fbcdn.net/hphotos-prn1/12957_324687120984217_886379204_n.jpg) no-repeat; background-size: contain;}
 .sf {background: url(https://sphotos-b.xx.fbcdn.net/hphotos-prn1/555793_324686074317655_12666433_n.jpg) no-repeat; background-size: contain;}
-.op {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/561513_324685157651080_1183993040_n.jpg) no-repeat; background-size: contain;}
-.ns {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/561513_324685157651080_1183993040_n.jpg) no-repeat; background-size: contain;}
-.tb {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/561513_324685157651080_1183993040_n.jpg) no-repeat; background-size: contain;}
-.fm {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-prn1/561513_324685157651080_1183993040_n.jpg) no-repeat; background-size: contain;}
+.op {background: url(https://sphotos-b.xx.fbcdn.net/hphotos-ash4/485155_324687127650883_766229582_n.jpg) no-repeat; background-size: contain;}
+.ns {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-ash3/538029_324687200984209_358328787_n.jpg) no-repeat; background-size: contain;}
+.tb {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-frc1/604055_324687204317542_894387543_n.jpg) no-repeat; background-size: contain;}
+.fm {background: url(https://sphotos-a.xx.fbcdn.net/hphotos-ash3/13226_324687214317541_369059320_n.jpg) no-repeat; background-size: contain;}
 
 
 /* The .reset class is added to the cards when the game is reset */
