--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ body {
 }
 
 .front {
-  background: url(./images/card.png) 0 0;
+  background: url(http://25.media.tumblr.com/tumblr_m81vgnSxAL1rnqedco1_500.jpg) 0 0;
   z-index: 10;
   border-radius: 4px;
 }
