--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
 #game.open #gameIntro {
   opacity: 1;
   z-index: 3;
-  background: url(https://sphotos-b.xx.fbcdn.net/hphotos-prn1/11222_324688260984103_881503277_n.jpg) contain no-repeat;
+  background: url(https://sphotos-b.xx.fbcdn.net/hphotos-prn1/11222_324688260984103_881503277_n.jpg); background size: contain no-repeat;
 }
 
 #game.play #gameIntro, #game.end #gameIntro {
