--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
 #game.open #gameIntro {
   opacity: 1;
   z-index: 3;
-  background color:purple
+  background: url(https://sphotos-b.xx.fbcdn.net/hphotos-prn1/11222_324688260984103_881503277_n.jpg); background size: contain no-repeat;
 }
 
 #game.play #gameIntro, #game.end #gameIntro {
@@ -233,7 +233,7 @@ body {
 }
 
 .front {
-  background: url(http://25.media.tumblr.com/tumblr_m81vgnSxAL1rnqedco1_500.jpg) 0 0;
+  background: url(http://25.media.tumblr.com/tumblr_m81vgnSxAL1rnqedco1_500.jpg); contain 0 0;
   z-index: 10;
   border-radius: 4px;
 }
