--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ body {
 
 /* The #gameComplete element holds the screen that shows when you finish the game */
 #gameComplete {
-  background: url(./images/end.png) center 0 no-repeat;
+  background: url(http://www.glamour.com/images/entertainment/2013/1/eddie-redmayne-w724.jpg) center 0 no-repeat;
   text-align: center;
   position: absolute;
   margin: 10px;
